Fix hard to read text

--- a/brickheadz/css/style.css
+++ b/brickheadz/css/style.css
@@ -1425,6 +1425,7 @@ ul.filter > li.active a, ul.filter > li > a:hover,ul.filter > li > a:focus {
     height: 100%;
     text-align: center;
     width: 100%;
+    color: #FFF;
 }
 .collection-overlay-content {
     display: table-cell;
